--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pt-tools",
+  "name": "protracker-tools",
   "version": "1.0.0",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
